--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,7 +11,7 @@ mlflow:
 optuna:
   n_trials: 50
   cv_folds: 5
-  scoring: "roc_auc"
+  scoring: "recall"
   direction: "maximize"
 
 models:
@@ -26,6 +26,7 @@ models:
     fixed:
       max_iter: 1000
       random_state: 4141
+      class_weight: "balanced"
 
   xgboost:
     search_space:
@@ -80,6 +81,7 @@ models:
     fixed:
       random_state: 4141
       verbose: -1
+      class_weight: "balanced"
 
   catboost:
     search_space:
@@ -99,6 +101,7 @@ models:
     fixed:
       random_state: 4141
       verbose: false
+      auto_class_weights: "Balanced"
 
   ensemble:
     method: "stacking"
@@ -107,3 +110,4 @@ models:
       type: "logistic_regression"
       params:
         random_state: 4141
+        class_weight: "balanced"
