--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "pyyaml>=6.0.0",
     "kaggle>=1.6.0",
+    "matplotlib>=3.7.0",
 ]
 
 [project.optional-dependencies]
