--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "MLOps project for Telco Customer Churn prediction"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "mlflow>=2.9.0",
+    "mlflow==2.9.2",
     "dvc>=3.30.0",
     "pandas>=2.0.0",
     "scikit-learn>=1.3.0",
