--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ POSTGRES_DB=mlflow
 # MinIO
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=your_secure_minio_password_here
+
+# MLflow S3 (MinIO) - for local pipeline runs
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=your_secure_minio_password_here
+MLFLOW_S3_ENDPOINT_URL=http://localhost:9000
